<resources>
    <string name="app_name" translatable="false">to-do@Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_sign_in">Register</string>
    <string name="action_log_in">Login</string>
    <string name="action_house_connect">Connect to home</string>
    <string name="action_create_house">Create home</string>
    <string name="action_reload">Reload</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_wallet">Wallet</string>

    <string name="title_activity_summary" translatable="false"> </string>
    <string name="title_activity_main">Today</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_add_home">Add home</string>
    <string name="title_activity_new_home_complete">Congratulation</string>
    <string name="title_activity_home_manager">Home manager</string>
    <string name="title_activity_add_task">Add task</string>
    <string name="title_activity_tasks_manager">Tasks manger</string>
    <string name="title_summary_fragment_one">Current: done</string>
    <string name="title_summary_fragment_two">Current: not done</string>
    <string name="title_summary_fragment_three">History</string>
    <string name="title_popup_edit_task">Edit task</string>
    <string name="title_popup_add_task">Add task</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_popup_change_name">Change name</string>
    <string name="title_popup_change_email">Change email</string>
    <string name="title_popup_change_password">Change password</string>
    <string name="title_nothing_to_show">There is nothing to show</string>
    <string name="title_activity_update">Please update</string>
    <string name="send_to">Share...</string>

    <string name="menu_title_summary">Summary</string>
    <string name="menu_title_home_manager">Home manager</string>
    <string name="menu_title_settings">Settings</string>
    <string name="menu_title_invite">Invite</string>
    <string name="menu_title_share">Share</string>
    <string name="menu_title_send">Send</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_repeat">Repeat password</string>
    <string name="prompt_home_id">Home ID</string>
    <string name="prompt_time_left">Time left</string>
    <string name="prompt_done">Done</string>
    <string name="prompt_title">Title</string>
    <string name="prompt_frequency">Frequency</string>
    <string name="prompt_every">Every</string>
    <string name="prompt_add_task">Add task</string>
    <string name="prompt_manage_task">Manage tasks</string>
    <string name="prompt_log_ot_from_home">log out from home</string>
    <string name="prompt_remove_home">Remove Home</string>
    <string name="prompt_save">save</string>
    <string name="prompt_are_you_sure">Are you sure?</string>
    <string name="prompt_yes">Yes</string>
    <string name="Prompt_no">No</string>
    <string name="prompt_out_of_date">This application is out of date. Please update!</string>
    <string name="prompt_coming_soon">Coming soon in next version</string>
    <string name="prompt_check_this_app">Check this app</string>


    <string name="time_todo">To do </string>
    <string name="time_today">Today</string>
    <string name="time_yesterday">Yesterday</string>
    <string name="time_tomorrow">Tomorrow</string>
    <string name="time_in">In</string>
    <string name="time_day">day</string>
    <string name="time_days">days</string>
    <string name="time_days_ago">days ago</string>


    <string name="success_task_added">Task successfully added!</string>
    <string name="success_task_saved">Task successfully saved!</string>
    <string name="success_profile_updated">Profile has been updated</string>

    <string name="error_not_equal_passwords">Passwords are not equal</string>
    <string name="error_all_field_required">All field are required!</string>
    <string name="error_frequency_more_than_zero">The frequency must be greater than 0!</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect!</string>
    <string name="error_field_required">This field is required!</string>

    <string name="permission_rationale" translatable="false">"Contacts permissions are needed for providing email
        completions."</string>

    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-9486440383744688/6210044246</string>
    <string name="play_store_link" translatable="false">https://play.google.com/store/apps/details?id=com.gr3mlin106.to_do_at_home</string>
    <string name="prompt_logout">Logout</string>
    <string name="prompt_change_password">Change password</string>
    <string name="prompt_change_email">Change email</string>
    <string name="prompt_change_name">Change name</string>
    <string name="or_label">OR</string>
    <string name="prompt_update">Update</string>


</resources>
