<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_summary"
            android:icon="@drawable/ic_summary"
            android:title="@string/menu_title_summary" />
        <item
            android:id="@+id/menu_home_manager"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_title_home_manager" />
        <item
            android:id="@+id/menu_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_title_settings" />
    </group>

    <item android:title="@string/menu_title_invite">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_title_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_title_send" />
        </menu>
    </item>

</menu>
