<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HomeManagerActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/prompt_home_id"
        android:id="@+id/homeManager_homeID_label"
        android:layout_column="0"
        android:layout_row="0"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/prompt_password"
        android:id="@+id/homeManager_password_label"
        android:layout_column="0"
        android:layout_row="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_column="0"
        android:layout_row="2"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prompt_manage_task"
        android:id="@+id/homeManager_manageTask_button"
        android:layout_row="3"
        android:layout_column="0" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_column="0"
        android:layout_row="4"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prompt_log_ot_from_home"
        android:id="@+id/homeManager_logoutFromHome_button"
        android:layout_column="0"
        android:layout_row="5" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prompt_remove_home"
        android:id="@+id/homeManager_removeHome_button"
        android:layout_row="6"
        android:layout_column="0"
        android:backgroundTint="@color/colorRed"
        android:backgroundTintMode="src_in"
        android:visibility="gone" />

</GridLayout>
