<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gr3mlin106.to_do_at_home.SettingsActivity"
    android:id="@+id/settings_layout">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prompt_change_name"
        android:id="@+id/settings_change_name"
        android:layout_column="0"
        android:layout_row="0" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prompt_change_email"
        android:id="@+id/settings_change_email"
        android:layout_column="0"
        android:layout_row="1" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prompt_change_password"
        android:id="@+id/settings_change_password"
        android:layout_column="0"
        android:layout_row="3" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prompt_logout"
        android:id="@+id/settings_logout"
        android:layout_row="5"
        android:layout_column="0" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_column="0"
        android:layout_row="2"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_column="0"
        android:layout_row="4"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp" />

</GridLayout>
